Improved command line system
