# api/v1/openapi.yaml
@@ -2,11 +2,11 @@
 openapi: 3.0.0
 info:
   version: 1.0.0
-  title: nmap scheduling API
+  title: badgeserv
   license:
     name: MIT
   description: |
-    API for scheduling nmap scans of remote hosts, and reviewing results of previous scans.
+    No-Nonsense badge generator service. Ideal for on-premises hosting!
 servers:
 - url: http://localhost:8080/api/v1
 components:
@@ -24,46 +24,6 @@ components:
           format: date-time
         version:
           type: string
-    ScanId:
-      description: Scan ID value
-      type: object
-      properties:
-        scan_id:
-          type: string
-          description: Unique identifier (base32, 128-bit encoded ID) of a scan request
-    NmapPortResult:
-      description: nmap port result
-      type: object
-      properties:
-        protocol:
-          type: string
-          enum:
-          - tcp
-          - udp
-        port:
-          type: integer
-          format: int32
-        service_name:
-          type: string
-        reason:
-          type: string
-    NmapResults:
-      description: nmap results
-      type: object
-      properties:
-        host_status:
-          enum:
-          - up
-          - down
-        date:
-          type: string
-          format: date-time
-        host:
-          type: string
-        ports:
-          type: array
-          items:
-            $ref: "#/components/schemas/NmapPortResult"
     ClientError:
       description: error object for client errors
       type: object
@@ -100,189 +60,145 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PingResponse"
-  /scan/{host}:
-    post:
-      tags:
-      - scan
-      description: |
-        Initiate a new nmap scan of an IP and return the ID number of the scan results. If a scan is already in
-        progress or queued, then the existing ID of that request will be returned.
-      parameters:
-      - in: path
-        name: host
-        description: Hostname or IP address of the server to scan
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK - scan already in progress, original scan ID returned
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ScanId"
-        "201":
-          description: OK - scan queued
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ScanId"
-        "400":
-          description: Client Error - Invalid Hostname or IP address
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ClientError"
-  /results/host/{host}:
+  /badge/static:
     get:
       tags:
-      - results
+      - generate
       description: |
-        Request the results of a scan ID.
+        Generate a static badge based on the supplied parameters
       parameters:
-      - in: path
-        name: host
-        description: Hostname or IP address of the server to scan
-        required: true
+      - in: query
+        name: label
+        description: Pongo2 format string to display for fo the badge label
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: message
+        description: Pongo2 format string to display for fo the badge message
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: color
+        description: Pongo2 format string to select a badge color by
+        required: false
         schema:
           type: string
       responses:
         "200":
-          description: OK - summary results for IP
+          description: Returns the badge
           content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NmapPortResult"
+            image/svg+xml:
         "400":
-          description: Client Error - Invalid Hostname or IP address
+          description: Client Error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ClientError"
-        "404":
-          description: Not Found - no results for IP
-  /results/host/{host}/latest:
+  
+  /badge/dynamic:
     get:
       tags:
-        - results
+      - generate
       description: |
-        Request the results of the latest host scan ID.
+        Generate a dynamic badge based on the supplied parameters. A dynamic badge is built from data fetched from
+        a target source and pongo2 formatted rendering strings.
       parameters:
-        - in: path
-          name: host
-          description: Hostname or IP address of the server to scan
-          required: true
-          schema:
-            type: string
+      - in: query
+        name: target
+        description: URL of the server to fetch dynamic data from.
+        required: true
+        schema:
+          type: string
+      - in: query
+        name: label
+        description: Pongo2 format string to display for fo the badge label
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: message
+        description: Pongo2 format string to display for fo the badge message
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: color
+        description: Pongo2 format string to select a badge color by
+        required: false
+        schema:
+          type: string
       responses:
         "200":
-          description: OK - latest scan results for host
+          description: Returns the badge
           content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NmapPortResult"
-        "202":
-          description: Accepted - Scan In Progress
+            image/svg+xml:
         "400":
-          description: Client Error - Invalid Scan ID
+          description: Client Error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ClientError"
-  /results/id/{scan_id}:
+
+  # /badge/endpoint:
+  #   get:
+  #     tags:
+  #     - generate
+  #     description: |
+  #       Endpoint badges implement a compatible interface similar to [shields.io](https://shields.io) and 
+  #       [badgen.net](https://badgen.net).
+
+  /badge/predefined:
     get:
       tags:
-      - results
+      - generate
       description: |
-        Request the results of a scan ID.
-      parameters:
-      - in: path
-        name: scan_id
-        description: Scan ID to display results for
-        required: true
-        schema:
-          type: string
+        Display the list of predefined badges and their parameter descriptions.
+        Predefined parameters are essentially dynamic badges with fixed templates and targets. This is useful for
+        including secrets to access services.
       responses:
         "200":
-          description: OK - scan results for ID
+          description: Returns the badge
           content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NmapPortResult"
-        "202":
-          description: Accepted - Scan In Progress
+            image/svg+xml:
         "400":
-          description: Client Error - Invalid Scan ID
+          description: Client Error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ClientError"
-        "404":
-          description: Not Found - Scan ID not found
-  /results/diff/ports/{scanId1}/{scanId2}:
+      
+
+  /badge/predefined/{predefined_name}/:
     get:
       tags:
-      - comparison
+      - generate
       description: |
-        Request a difference summary of found ports between scanId 1 and scanId 2.
-        ScanID timestamps will determine order.
+        Generate a static badge based on the supplied parameters
       parameters:
       - in: path
-        name: scanId1
-        description: scan ID of one side of the comparison
+        name: predefined_name
+        description: The predefined badge name to return a query for.
         required: true
         schema:
           type: string
-      - in: path
-        name: scanId2
-        description: scan ID of the other side of the comparison
-        required: true
+      - in: query
+        name: params
+        description: Predefined badges may define custom parameters to control templating.
         schema:
-          type: string
+          type: object
+          additionalProperties: true
+        style: form
+        explode: true
       responses:
         "200":
-          description: OK - port difference results
+          description: Returns the badge
           content:
-            application/json:
-              schema:
-                type: object
-        "202":
-          description: Accepted - Scan In Progress
+            image/svg+xml:
         "400":
-          description: Client Error - invalid host specification
+          description: Client Error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ClientError"
-        "404":
-          description: Not Found - host not found
-  /results/diff/ports/host/{host}:
-    get:
-      tags:
-      - comparison
-      description: |
-        Request a difference summary of found ports between latest two scans for the given host.
-      parameters:
-      - in: path
-        name: host
-        description: Hostname or IP address of the server to scan
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK - port difference results
-          content:
-            application/json:
-              schema:
-                type: object
-        "202":
-          description: Accepted - Scan In Progress
-        "400":
-          description: Client Error - invalid host specification
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ClientError"
-        "404":
-          description: Not Found - host not found
